<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView9"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_40sdp"
        app:cardCornerRadius="@dimen/_6sdp"
        app:cardElevation="@dimen/_4sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/exam_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/exam_title"
            android:inputType="textPersonName" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView10"
        android:layout_width="0dp"
        android:layout_height="@dimen/_140sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_6sdp"
        app:cardElevation="@dimen/_4sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView11">

        <EditText
            android:id="@+id/question_txt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:gravity="center|start|top"
            android:hint="@string/question_str"
            android:inputType="textMultiLine" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView8"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_6sdp"
        app:cardElevation="@dimen/_4sdp"
        app:layout_constraintEnd_toEndOf="@+id/cardView9"
        app:layout_constraintStart_toStartOf="@+id/cardView9"
        app:layout_constraintTop_toBottomOf="@+id/cardView9">

        <TextView
            android:id="@+id/question_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/alef"
            android:gravity="center"
            android:text="Question Number : 1"
            android:textColor="@color/main_blue_dark"
            android:textSize="@dimen/_16sdp" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/next_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:text="@string/next_str"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/cardView10"
        app:layout_constraintTop_toBottomOf="@+id/cardView10" />

    <Button
        android:id="@+id/prev_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/prev_question"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="@+id/cardView10"
        app:layout_constraintTop_toBottomOf="@+id/cardView10" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:theme="@style/ButtonStyleTextColor"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/next_question"
        app:layout_constraintStart_toStartOf="@+id/prev_question"
        app:layout_constraintTop_toBottomOf="@+id/prev_question" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView11"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_6sdp"
        app:cardElevation="@dimen/_4sdp"
        app:layout_constraintEnd_toEndOf="@+id/cardView8"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cardView8"
        app:layout_constraintTop_toBottomOf="@+id/cardView8">

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>