<?xml version="1.0" encoding="utf-8"?>


<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="@dimen/_4sdp">

        <androidx.cardview.widget.CardView
            android:id="@+id/main_progress"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:visibility="gone"
            app:cardCornerRadius="@dimen/_50sdp"
            app:cardElevation="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                android:id="@+id/progressBar4"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/submit_str"
            android:textAllCaps="false"
            android:theme="@style/MyButtonTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/cardView5"
            app:layout_constraintStart_toStartOf="@+id/cardView5"
            app:layout_constraintTop_toBottomOf="@+id/cardView5" />

        <EditText
            android:id="@+id/lesson_title"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/edit_text_shape"
            android:ems="10"
            android:hint="@string/lessons_title"
            android:inputType="textPersonName"
            android:padding="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/lesson_subject"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/edit_text_shape"
            app:layout_constraintEnd_toEndOf="@+id/lesson_title"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="@+id/lesson_title"
            app:layout_constraintTop_toBottomOf="@+id/lesson_title" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView5"
            android:layout_width="0dp"
            android:layout_height="@dimen/_200sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_6sdp"
            app:layout_constraintEnd_toEndOf="@+id/upload_image"
            app:layout_constraintStart_toStartOf="@+id/upload_image"
            app:layout_constraintTop_toBottomOf="@+id/progressBar_image">

            <EditText
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/lesson_content"
                android:inputType="textMultiLine"
                android:lines="15" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/upload_video"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/_upload_video"
            android:textAllCaps="false"
            android:theme="@style/MyButtonTheme"
            app:layout_constraintEnd_toEndOf="@+id/grade_spinner2"
            app:layout_constraintStart_toStartOf="@+id/grade_spinner2"
            app:layout_constraintTop_toBottomOf="@+id/grade_spinner2" />

        <LinearLayout
            android:id="@+id/upload_image"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/edit_text_shape"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/upload_video"
            app:layout_constraintStart_toStartOf="@+id/upload_video"
            app:layout_constraintTop_toBottomOf="@+id/progressBar_video">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/upload_image"
                android:textColor="@color/main_orange_dark" />
        </LinearLayout>

        <Spinner
            android:id="@+id/grade_spinner2"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/edit_text_shape"
            app:layout_constraintEnd_toEndOf="@+id/lesson_subject"
            app:layout_constraintStart_toStartOf="@+id/lesson_subject"
            app:layout_constraintTop_toBottomOf="@+id/lesson_subject" />

        <ProgressBar
            android:id="@+id/progressBar_video"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/upload_video"
            app:layout_constraintStart_toStartOf="@+id/upload_video"
            app:layout_constraintTop_toBottomOf="@+id/upload_video" />

        <ProgressBar
            android:id="@+id/progressBar_image"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/upload_image"
            app:layout_constraintStart_toStartOf="@+id/upload_image"
            app:layout_constraintTop_toBottomOf="@+id/upload_image" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>