<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@color/main_orange_light"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/_150sdp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/main_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="100dp"
        app:cardCornerRadius="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintGuide_begin="@dimen/_50sdp"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintGuide_percent="0.15"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline2"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_120sdp"
                        android:layout_marginEnd="8dp"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintGuide_percent="0.85"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/name_field"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_30sdp"
                        android:background="@drawable/edit_text_shape"
                        android:ems="10"
                        android:fontFamily="@font/alef"
                        android:hint="@string/name_hint"
                        android:inputType="textPersonName"
                        android:paddingStart="@dimen/_3sdp"
                        android:paddingEnd="@dimen/_3sdp"
                        android:textSize="@dimen/_12sdp"
                        app:layout_constraintEnd_toStartOf="@+id/guideline2"
                        app:layout_constraintStart_toStartOf="@+id/guideline3"
                        app:layout_constraintTop_toTopOf="@+id/guideline4" />

                    <EditText
                        android:id="@+id/email_field"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:background="@drawable/edit_text_shape"
                        android:ems="10"
                        android:fontFamily="@font/alef"
                        android:hint="@string/email_hint"
                        android:inputType="textWebEmailAddress"
                        android:paddingStart="@dimen/_3sdp"
                        android:paddingEnd="@dimen/_3sdp"
                        android:textSize="@dimen/_12sdp"
                        app:layout_constraintEnd_toStartOf="@+id/guideline2"
                        app:layout_constraintStart_toStartOf="@+id/guideline3"
                        app:layout_constraintTop_toBottomOf="@id/name_field" />

                    <EditText
                        android:id="@+id/passowrd1"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:background="@drawable/edit_text_shape"
                        android:ems="10"
                        android:fontFamily="@font/alef"
                        android:hint="@string/passowrd"
                        android:inputType="textPassword"
                        android:paddingStart="@dimen/_3sdp"
                        android:paddingEnd="@dimen/_3sdp"
                        android:textSize="@dimen/_12sdp"
                        app:layout_constraintEnd_toStartOf="@+id/guideline2"
                        app:layout_constraintStart_toStartOf="@+id/guideline3"
                        app:layout_constraintTop_toBottomOf="@id/email_field" />

                    <EditText
                        android:id="@+id/passowrd2"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:background="@drawable/edit_text_shape"
                        android:ems="10"
                        android:fontFamily="@font/alef"
                        android:hint="@string/passowrd_re"
                        android:inputType="textPassword"
                        android:paddingStart="@dimen/_3sdp"
                        android:paddingEnd="@dimen/_3sdp"
                        android:textSize="@dimen/_12sdp"
                        app:layout_constraintEnd_toStartOf="@+id/guideline2"
                        app:layout_constraintStart_toStartOf="@+id/guideline3"
                        app:layout_constraintTop_toBottomOf="@id/passowrd1" />

                    <EditText
                        android:id="@+id/date_picker"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:background="@drawable/edit_text_shape"
                        android:ems="10"
                        android:fontFamily="@font/alef"
                        android:hint="@string/choose_Date"
                        android:inputType="datetime"
                        android:paddingStart="@dimen/_3sdp"
                        android:paddingEnd="@dimen/_3sdp"
                        android:textSize="@dimen/_12sdp"
                        app:layout_constraintEnd_toStartOf="@+id/guideline2"
                        app:layout_constraintStart_toStartOf="@+id/guideline3"
                        app:layout_constraintTop_toBottomOf="@id/passowrd2" />


                    <Spinner
                        android:id="@+id/schools_spinner"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:background="@drawable/edit_text_shape"
                        android:ems="10"
                        android:hint="@string/choose_Date"
                        android:inputType="datetime"
                        android:paddingStart="@dimen/_3sdp"
                        android:paddingEnd="@dimen/_3sdp"
                        app:layout_constraintEnd_toStartOf="@+id/guideline2"
                        app:layout_constraintStart_toStartOf="@+id/guideline3"
                        app:layout_constraintTop_toBottomOf="@id/date_picker" />

                    <Spinner
                        android:id="@+id/grade_spinner"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:background="@drawable/edit_text_shape"
                        android:ems="10"
                        android:hint="@string/choose_Date"
                        android:inputType="datetime"
                        android:paddingStart="@dimen/_3sdp"
                        android:paddingEnd="@dimen/_3sdp"
                        app:layout_constraintEnd_toStartOf="@+id/guideline2"
                        app:layout_constraintStart_toStartOf="@+id/guideline3"
                        app:layout_constraintTop_toBottomOf="@id/schools_spinner" />

                    <Button
                        android:id="@+id/createBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginTop="@dimen/_8sdp"

                        android:background="@drawable/btn_blue_shape"
                        android:fontFamily="@font/alef"
                        android:text="@string/create_user"

                        android:textAllCaps="false"
                        app:layout_constraintEnd_toStartOf="@+id/guideline2"
                        app:layout_constraintStart_toStartOf="@+id/guideline3"
                        app:layout_constraintTop_toBottomOf="@id/grade_spinner" />


                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/avatar_container"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:cardCornerRadius="@dimen/_50sdp"
        app:cardElevation="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/profile_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/user" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>